lib/tests/fixtures/compiler/parser/illegal_defined_type_def.baseline
Error: illegal_defined_type_def.pp:3:5: defined types can only be defined at top-level or inside a class.
  define bar
  ^~~~~~~~~~
